[package]
name = "lock_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
indicatif = { version="0.17.3", features= ["rayon"] }
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.160", features= ["derive"] }
